--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h1> this file is from ansible git-jenkins </h1>
-<h1> created by Sonal MITAAL </h1>
+<h1> created by Shweta Agarwal </h1>
 <h1> File for playbook execution from jenkins</h1>
 <h1>Deploying on 17June </h1>
 <h1> we are learning jenkins and ansible Integration</h1>
